crates/di-macros/src/snapshots/studiole_di_macros__tests__async_unit_struct.snap
---
source: crates/di-macros/src/tests.rs
expression: format_tokens(output)
---
impl ::studiole_di::prelude::FromServicesAsync for UnitService {
    type Error = ::studiole_di::prelude::ResolveError;
    async fn from_services_async(
        services: &::studiole_di::prelude::ServiceProvider,
    ) -> ::std::result::Result<
        Self,
        ::studiole_report::prelude::Report<::studiole_di::prelude::ResolveError>,
    > {
        Ok(Self {})
    }
}
