crates/di-macros/src/snapshots/studiole_di_macros__tests__sync_mixed_concrete_and_trait_fields.snap
---
source: crates/di-macros/src/tests.rs
expression: format_tokens(output)
---
impl ::studiole_di::prelude::FromServices for Handler {
    type Error = ::studiole_di::prelude::ResolveError;
    fn from_services(
        services: &::studiole_di::prelude::ServiceProvider,
    ) -> ::std::result::Result<
        Self,
        ::studiole_report::prelude::Report<::studiole_di::prelude::ResolveError>,
    > {
        Ok(Self {
            config: services.get()?,
            cache: services.get_trait::<dyn Get>()?,
            retries: Default::default(),
        })
    }
}
